--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
+# Project specific
+
+saved_graph/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 *.csv
+
 
 # C extensions
 *.so
