--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@ data_scraped/
 *.html
 .vscode/
 work_in_progress/
+documentation/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 *.csv
 .DS_Store
+
 
 # C extensions
 *.so
