--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 community==1.0.0b1
 dirty_cat==0.2.0
-matplotlib==3.4.3
-networkx==2.6.3
+fairseq==0.10.2
+gensim==4.1.2
+matplotlib==3.5.1
+networkx==2.7.1
 node2vec==0.4.4
-numpy==1.20.0
-pandas==1.3.4
-plotly==4.14.3
-python_louvain==0.15
+numpy==1.21.5
+pandas==1.4.1
+Pillow==9.0.1
+plotly==5.6.0
+pydantic==1.8.2
 scikit_learn==1.0.2
-scipy==1.7.3
-sentence_transformers==2.1.0
-textacy==0.11.0
-torch==1.10.0
-tqdm==4.62.3
+scipy==1.8.0
+sentence_transformers==2.2.0
+setuptools==49.2.1
+streamlit==1.8.1
+textacy==0.12.0
+toml==0.10.2
+torch==1.10.2
+tqdm==4.63.0
 umap==0.1.1
-umap_learn==0.5.2
