--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,137 @@
-community==1.0.0b1
-dirty_cat==0.2.0
-#fairseq==0.10.2
-gensim==4.1.2
-matplotlib==3.5.1
-networkx==2.6.3
-node2vec==0.4.3
-numpy==1.20.0
-pandas==1.3.5
-Pillow==9.0.1
-plotly==5.6.0
-pydantic==1.8.2
-scikit_learn==1.0.2
-scipy==1.7.3
-sentence_transformers==2.2.0
-setuptools==49.2.1
-streamlit==1.8.1
-textacy==0.11.0
-toml==0.10.2
-torch==1.10.2
-tqdm==4.63.0
-umap==0.1.1
-python-louvain==0.16
+anyio==3.6.2 ; python_version >= "3.8" and python_version < "4.0"
+appnope==0.1.3 ; python_version >= "3.8" and python_version < "4.0" and sys_platform == "darwin" or python_version >= "3.8" and python_version < "4.0" and platform_system == "Darwin"
+argon2-cffi-bindings==21.2.0 ; python_version >= "3.8" and python_version < "4.0"
+argon2-cffi==21.3.0 ; python_version >= "3.8" and python_version < "4.0"
+asttokens==2.1.0 ; python_version >= "3.8" and python_version < "4.0"
+attrs==22.1.0 ; python_version >= "3.8" and python_version < "4.0"
+babel==2.11.0 ; python_version >= "3.8" and python_version < "4.0"
+backcall==0.2.0 ; python_version >= "3.8" and python_version < "4.0"
+beautifulsoup4==4.11.1 ; python_version >= "3.8" and python_version < "4.0"
+bleach==5.0.1 ; python_version >= "3.8" and python_version < "4.0"
+blis==0.7.9 ; python_version >= "3.8" and python_version < "4.0"
+cachetools==5.2.0 ; python_version >= "3.8" and python_version < "4.0"
+catalogue==2.0.8 ; python_version >= "3.8" and python_version < "4.0"
+certifi==2022.9.24 ; python_version >= "3.8" and python_version < "4"
+cffi==1.15.1 ; python_version >= "3.8" and python_version < "4.0"
+charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "4"
+click==8.1.3 ; python_version >= "3.8" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.8" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.8" and python_version < "4.0" and platform_system == "Windows"
+community==1.0.0b1 ; python_version >= "3.8" and python_version < "4.0"
+confection==0.0.3 ; python_version >= "3.8" and python_version < "4.0"
+contourpy==1.0.6 ; python_version >= "3.8" and python_version < "4.0"
+cycler==0.11.0 ; python_version >= "3.8" and python_version < "4.0"
+cymem==2.0.7 ; python_version >= "3.8" and python_version < "4.0"
+cytoolz==0.12.0 ; python_version >= "3.8" and python_version < "4.0"
+debugpy==1.6.3 ; python_version >= "3.8" and python_version < "4.0"
+decorator==5.1.1 ; python_version >= "3.8" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.8" and python_version < "4.0"
+entrypoints==0.4 ; python_version >= "3.8" and python_version < "4.0"
+executing==1.2.0 ; python_version >= "3.8" and python_version < "4.0"
+fastjsonschema==2.16.2 ; python_version >= "3.8" and python_version < "4.0"
+flask==2.2.2 ; python_version >= "3.8" and python_version < "4.0"
+fonttools==4.38.0 ; python_version >= "3.8" and python_version < "4.0"
+gensim==4.2.0 ; python_version >= "3.8" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.8" and python_version < "4"
+importlib-metadata==5.0.0 ; python_version >= "3.8" and python_version < "3.10"
+importlib-resources==5.10.0 ; python_version >= "3.8" and python_version < "3.9"
+ipykernel==6.17.1 ; python_version >= "3.8" and python_version < "4.0"
+ipython-genutils==0.2.0 ; python_version >= "3.8" and python_version < "4.0"
+ipython==8.6.0 ; python_version >= "3.8" and python_version < "4.0"
+itsdangerous==2.1.2 ; python_version >= "3.8" and python_version < "4.0"
+jedi==0.18.1 ; python_version >= "3.8" and python_version < "4.0"
+jellyfish==0.9.0 ; python_version >= "3.8" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.8" and python_version < "4.0"
+joblib==1.2.0 ; python_version >= "3.8" and python_version < "4.0"
+json5==0.9.10 ; python_version >= "3.8" and python_version < "4.0"
+jsonschema==4.17.0 ; python_version >= "3.8" and python_version < "4.0"
+jupyter-client==7.4.7 ; python_version >= "3.8" and python_version < "4.0"
+jupyter-core==5.0.0 ; python_version >= "3.8" and python_version < "4.0"
+jupyter-server==1.23.2 ; python_version >= "3.8" and python_version < "4.0"
+jupyterlab-pygments==0.2.2 ; python_version >= "3.8" and python_version < "4.0"
+jupyterlab-server==2.16.3 ; python_version >= "3.8" and python_version < "4.0"
+jupyterlab==3.5.0 ; python_version >= "3.8" and python_version < "4.0"
+kiwisolver==1.4.4 ; python_version >= "3.8" and python_version < "4.0"
+langcodes==3.3.0 ; python_version >= "3.8" and python_version < "4.0"
+llvmlite==0.39.1 ; python_version >= "3.8" and python_version < "4.0"
+markupsafe==2.1.1 ; python_version >= "3.8" and python_version < "4.0"
+matplotlib-inline==0.1.6 ; python_version >= "3.8" and python_version < "4.0"
+matplotlib==3.6.2 ; python_version >= "3.8" and python_version < "4.0"
+mistune==2.0.4 ; python_version >= "3.8" and python_version < "4.0"
+murmurhash==1.0.9 ; python_version >= "3.8" and python_version < "4.0"
+nbclassic==0.4.8 ; python_version >= "3.8" and python_version < "4.0"
+nbclient==0.7.0 ; python_version >= "3.8" and python_version < "4.0"
+nbconvert==7.2.5 ; python_version >= "3.8" and python_version < "4.0"
+nbformat==5.7.0 ; python_version >= "3.8" and python_version < "4.0"
+nest-asyncio==1.5.6 ; python_version >= "3.8" and python_version < "4.0"
+networkx==2.8.8 ; python_version >= "3.8" and python_version < "4.0"
+node2vec==0.4.6 ; python_version >= "3.8" and python_version < "4.0"
+notebook-shim==0.2.2 ; python_version >= "3.8" and python_version < "4.0"
+notebook==6.5.2 ; python_version >= "3.8" and python_version < "4.0"
+numba==0.56.4 ; python_version >= "3.8" and python_version < "4.0"
+numpy==1.23.4 ; python_version >= "3.8" and python_version < "4.0"
+packaging==21.3 ; python_version >= "3.8" and python_version < "4.0"
+pandas==1.5.1 ; python_version >= "3.8" and python_version < "4.0"
+pandocfilters==1.5.0 ; python_version >= "3.8" and python_version < "4.0"
+parso==0.8.3 ; python_version >= "3.8" and python_version < "4.0"
+pathy==0.8.1 ; python_version >= "3.8" and python_version < "4.0"
+pexpect==4.8.0 ; python_version >= "3.8" and python_version < "4.0" and sys_platform != "win32"
+pickleshare==0.7.5 ; python_version >= "3.8" and python_version < "4.0"
+pillow==9.3.0 ; python_version >= "3.8" and python_version < "4.0"
+pkgutil-resolve-name==1.3.10 ; python_version >= "3.8" and python_version < "3.9"
+platformdirs==2.5.4 ; python_version >= "3.8" and python_version < "4.0"
+plotly==5.11.0 ; python_version >= "3.8" and python_version < "4.0"
+preshed==3.0.8 ; python_version >= "3.8" and python_version < "4.0"
+prometheus-client==0.15.0 ; python_version >= "3.8" and python_version < "4.0"
+prompt-toolkit==3.0.32 ; python_version >= "3.8" and python_version < "4.0"
+psutil==5.9.4 ; python_version >= "3.8" and python_version < "4.0"
+ptyprocess==0.7.0 ; python_version >= "3.8" and python_version < "4.0" and sys_platform != "win32" or python_version >= "3.8" and python_version < "4.0" and os_name != "nt"
+pure-eval==0.2.2 ; python_version >= "3.8" and python_version < "4.0"
+py==1.11.0 ; python_version >= "3.8" and python_version < "4.0" and implementation_name == "pypy"
+pycparser==2.21 ; python_version >= "3.8" and python_version < "4.0"
+pydantic==1.10.2 ; python_version >= "3.8" and python_version < "4.0"
+pygments==2.13.0 ; python_version >= "3.8" and python_version < "4.0"
+pynndescent==0.5.8 ; python_version >= "3.8" and python_version < "4.0"
+pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "4.0"
+pyphen==0.13.1 ; python_version >= "3.8" and python_version < "4.0"
+pyrsistent==0.19.2 ; python_version >= "3.8" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
+pytz==2022.6 ; python_version >= "3.8" and python_version < "4.0"
+pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.8" and python_version < "4.0"
+pywinpty==2.0.9 ; python_version >= "3.8" and python_version < "4.0" and os_name == "nt"
+pyzmq==24.0.1 ; python_version >= "3.8" and python_version < "4.0"
+requests==2.28.1 ; python_version >= "3.8" and python_version < "4"
+scikit-learn==1.1.3 ; python_version >= "3.8" and python_version < "4.0"
+scipy==1.9.3 ; python_version >= "3.8" and python_version < "4.0"
+send2trash==1.8.0 ; python_version >= "3.8" and python_version < "4.0"
+setuptools-scm==7.0.5 ; python_version >= "3.8" and python_version < "4.0"
+setuptools==65.5.1 ; python_version >= "3.8" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.8" and python_version < "4.0"
+smart-open==5.2.1 ; python_version >= "3.8" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.8" and python_version < "4.0"
+soupsieve==2.3.2.post1 ; python_version >= "3.8" and python_version < "4.0"
+spacy-legacy==3.0.10 ; python_version >= "3.8" and python_version < "4.0"
+spacy-loggers==1.0.3 ; python_version >= "3.8" and python_version < "4.0"
+spacy==3.4.3 ; python_version >= "3.8" and python_version < "4.0"
+srsly==2.4.5 ; python_version >= "3.8" and python_version < "4.0"
+stack-data==0.6.1 ; python_version >= "3.8" and python_version < "4.0"
+tenacity==8.1.0 ; python_version >= "3.8" and python_version < "4.0"
+terminado==0.17.0 ; python_version >= "3.8" and python_version < "4.0"
+textacy==0.12.0 ; python_version >= "3.8" and python_version < "4.0"
+thinc==8.1.5 ; python_version >= "3.8" and python_version < "4.0"
+threadpoolctl==3.1.0 ; python_version >= "3.8" and python_version < "4.0"
+tinycss2==1.2.1 ; python_version >= "3.8" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.8" and python_version < "4.0"
+toolz==0.12.0 ; python_version >= "3.8" and python_version < "4.0"
+tornado==6.2 ; python_version >= "3.8" and python_version < "4.0"
+tqdm==4.64.1 ; python_version >= "3.8" and python_version < "4.0"
+traitlets==5.5.0 ; python_version >= "3.8" and python_version < "4.0"
+typer==0.7.0 ; python_version >= "3.8" and python_version < "4.0"
+typing-extensions==4.4.0 ; python_version >= "3.8" and python_version < "4.0"
+umap-learn==0.5.3 ; python_version >= "3.8" and python_version < "4.0"
+urllib3==1.26.12 ; python_version >= "3.8" and python_version < "4"
+wasabi==0.10.1 ; python_version >= "3.8" and python_version < "4.0"
+wcwidth==0.2.5 ; python_version >= "3.8" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.8" and python_version < "4.0"
+websocket-client==1.4.2 ; python_version >= "3.8" and python_version < "4.0"
+werkzeug==2.2.2 ; python_version >= "3.8" and python_version < "4.0"
+zipp==3.10.0 ; python_version >= "3.8" and python_version < "3.10"
