--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ textacy = "^0.12.0"
 umap-learn = "^0.5.3"
 plotly = "^5.11.0"
 node2vec = "^0.4.6"
+importlib-metadata = "^5.0.0"
+python-louvain = "^0.16"
 
 
 [build-system]
