--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ flask==2.2.2 ; python_version >= "3.8" and python_version < "4.0"
 fonttools==4.38.0 ; python_version >= "3.8" and python_version < "4.0"
 gensim==4.2.0 ; python_version >= "3.8" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.8" and python_version < "4"
-importlib-metadata==5.0.0 ; python_version >= "3.8" and python_version < "3.10"
+importlib-metadata==5.0.0 ; python_version >= "3.8" and python_version < "4.0"
 importlib-resources==5.10.0 ; python_version >= "3.8" and python_version < "3.9"
 ipykernel==6.17.1 ; python_version >= "3.8" and python_version < "4.0"
 ipython-genutils==0.2.0 ; python_version >= "3.8" and python_version < "4.0"
@@ -95,6 +95,7 @@ pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "4.0"
 pyphen==0.13.1 ; python_version >= "3.8" and python_version < "4.0"
 pyrsistent==0.19.2 ; python_version >= "3.8" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "4.0"
+python-louvain==0.16 ; python_version >= "3.8" and python_version < "4.0"
 pytz==2022.6 ; python_version >= "3.8" and python_version < "4.0"
 pywin32==305 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.8" and python_version < "4.0"
 pywinpty==2.0.9 ; python_version >= "3.8" and python_version < "4.0" and os_name == "nt"
@@ -134,4 +135,4 @@ wcwidth==0.2.5 ; python_version >= "3.8" and python_version < "4.0"
 webencodings==0.5.1 ; python_version >= "3.8" and python_version < "4.0"
 websocket-client==1.4.2 ; python_version >= "3.8" and python_version < "4.0"
 werkzeug==2.2.2 ; python_version >= "3.8" and python_version < "4.0"
-zipp==3.10.0 ; python_version >= "3.8" and python_version < "3.10"
+zipp==3.10.0 ; python_version >= "3.8" and python_version < "4.0"
